# gadgets

./: AUTHORS.md  COPYRIGHT.md  Cargo.toml  FILE_MANIFEST.txt  GADGETS_FRAMEWORK_CODEX_PROMPT_STEP21_LICENSE_VALIDATION_2026_05_13.md  GADGETS_FRAMEWORK_LICENSE_UPDATE_CHECKPOINT_2026_05_13.md  GADGETS_FRAMEWORK_STEP17_KICKOFF_PROMPT.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP17_2026_05_12.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP18A_2026_05_12.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP18B_2026_05_12.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP18C_2026_05_12.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP19_2026_05_12.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP20_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP21_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP22_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP24_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP25_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP30_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP32_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP33_2026_05_13.md  GADGETS_FRAMEWORK_UPDATED_PLAN_CHECKLIST_PROGRESS_STEP35_2026_05_13.md  LICENSE-APACHE  LICENSE.md  NOTICE  README.md  SESSION_WRAPUP_REVIEW_2026_05_12.md
crates/gadgets-approval/: Cargo.toml
crates/gadgets-approval/src/: lib.rs
crates/gadgets-cli/: Cargo.toml
crates/gadgets-cli/src/: config.rs  init.rs  main.rs  manifest_loader.rs  pack_trust.rs
crates/gadgets-evidence/: Cargo.toml
crates/gadgets-evidence/src/: lib.rs
crates/gadgets-ledger/: Cargo.toml
crates/gadgets-ledger/src/: lib.rs
crates/gadgets-provider/: Cargo.toml
crates/gadgets-provider/src/: lib.rs
crates/gadgets-tools/: Cargo.toml
crates/gadgets-tools/src/: filesystem_read.rs  git_branch.rs  git_commit.rs  git_status.rs  lib.rs  patch_apply.rs  patch_plan.rs  pr_body.rs  redaction.rs  remote_pr.rs  test_runner.rs
docs/: ARCHITECTURE.md  DECISION_RECORD.md  DEVELOPER_MVP_ALPHA.md  IMPLEMENTATION_PLAN.md  LOCAL_DEVELOPER_MVP_WALKTHROUGH.md  OPEN_DECISIONS.md  PHASE_0_BASELINE.md  ROADMAP.md  STEP_10_PACK_MANIFEST_LOADING.md  STEP_11_PACK_VALIDATE.md  STEP_11_PACK_VALIDATE_OVERVIEW.md  STEP_12_OPENAI_PROVIDER_ADAPTER.md  STEP_13_ANTHROPIC_PROVIDER_ADAPTER.md  STEP_14_PATCH_WRITER_PLAN_ONLY.md  STEP_15_APPROVAL_RECORDS.md  STEP_16_APPROVED_PATCH_APPLY.md  STEP_17_ALLOWLISTED_TEST_RUNNER.md  STEP_17_ALLOWLISTED_TEST_RUNNER_CHECKPOINT.md  STEP_17_DOCS_ONLY_CHECKPOINT.md  STEP_18A_LOCAL_GIT_STATUS.md  STEP_18A_LOCAL_GIT_STATUS_CHECKPOINT.md  STEP_18B_PROTECTED_LOCAL_BRANCH_CREATE.md  STEP_18B_PROTECTED_LOCAL_BRANCH_CREATE_CHECKPOINT.md  STEP_18C_APPROVED_LOCAL_COMMIT.md  STEP_18C_APPROVED_LOCAL_COMMIT_CHECKPOINT.md  STEP_19_LOCAL_PR_BODY_GENERATION.md  STEP_19_LOCAL_PR_BODY_GENERATION_CHECKPOINT.md  STEP_20_LOCAL_DEVELOPER_MVP_HARDENING.md  STEP_20_LOCAL_DEVELOPER_MVP_HARDENING_CHECKPOINT.md  STEP_21_GUARDED_REMOTE_PR_CREATION.md  STEP_21_GUARDED_REMOTE_PR_CREATION_CHECKPOINT.md  STEP_22_POST_VALIDATION_BASELINE_RECONCILIATION.md  STEP_22_POST_VALIDATION_BASELINE_RECONCILIATION_CHECKPOINT.md  STEP_23_DEVELOPER_MVP_ALPHA_PACKAGING.md  STEP_23_DEVELOPER_MVP_ALPHA_PACKAGING_CHECKPOINT.md  (+52 more)
specs/: APPROVAL_MODEL.md  (+12 more)
(+58 files in other folders)
