[package]
name = "gadgets-approval"
version = "0.1.0"
edition = "2021"
description = "Approval record scaffolding for Gadgets Framework."
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
