[package]
name = "gadgets-evidence"
version = "0.1.0"
edition = "2021"
description = "Evidence bundle writer."
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]

[dependencies]
gadgets-core = { path = "../gadgets-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
