[package]
name = "gadgets-ledger"
version = "0.1.0"
edition = "2021"
description = "Append-only audit ledger."
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]

[dependencies]
gadgets-core = { path = "../gadgets-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
