[package]
name = "gadgets-provider"
version = "0.1.0"
edition = "2021"
description = "Model provider adapter traits, mock provider, OpenAI provider, and Anthropic provider."
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]

[dependencies]
gadgets-core = { path = "../gadgets-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
