[package]
name = "gadgets-tools"
version = "0.1.0"
edition = "2021"
description = "Tool/action provider traits and basic providers."
license = "MIT OR Apache-2.0"
authors = ["Richard S. Westmoreland <dev@rswestmore.land>"]

[dependencies]
gadgets-approval = { path = "../gadgets-approval" }
gadgets-core = { path = "../gadgets-core" }
gadgets-evidence = { path = "../gadgets-evidence" }
gadgets-ledger = { path = "../gadgets-ledger" }
gadgets-policy = { path = "../gadgets-policy" }
sha2 = "0.10"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
